tests/ui/parser/bad-interpolated-block.stderr
error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:5:15
   |
LL | / macro_rules! m {
LL | |     ($b:block) => {
LL | |         'lab: $b;
   | |         ------^^
   | |         |
   | |         the `block` fragment is within this context
LL | |         unsafe $b;
LL | |         |x: u8| -> () $b;
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
...
LL |       m!({});
   |       ------ in this macro invocation
   |
help: wrap this in another block
   |
LL |         'lab: { $b };
   |               +    +

error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:6:16
   |
LL | / macro_rules! m {
LL | |     ($b:block) => {
LL | |         'lab: $b;
LL | |         unsafe $b;
   | |         -------^^
   | |         |
   | |         the `block` fragment is within this context
LL | |         |x: u8| -> () $b;
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
...
LL |       m!({});
   |       ------ in this macro invocation
   |
help: wrap this in another block
   |
LL |         unsafe { $b };
   |                +    +

error: cannot use a `block` macro fragment here
  --> $DIR/bad-interpolated-block.rs:7:23
   |
LL | / macro_rules! m {
LL | |     ($b:block) => {
LL | |         'lab: $b;
LL | |         unsafe $b;
LL | |         |x: u8| -> () $b;
   | |                       ^^ the `block` fragment is within this context
LL | |     }
LL | | }
   | |_- in this expansion of `m!`
...
LL |       m!({});
   |       ------ in this macro invocation
   |
help: wrap this in another block
   |
LL |         |x: u8| -> () { $b };
   |                       +    +

error: aborting due to 3 previous errors

